--- a/Sources/ashburn/src/com/pokemonnogo/ashburn/AshBurn.form
+++ b/Sources/ashburn/src/com/pokemonnogo/ashburn/AshBurn.form
@@ -1052,7 +1052,7 @@
           </component>
         </children>
       </grid>
-      <grid id="247c7" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="247c7" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="4" fill="2" indent="0" use-parent-layout="false">
@@ -1063,25 +1063,48 @@
         <properties>
           <background color="-391931"/>
         </properties>
-        <border type="none" title="Pokemon locator"/>
+        <border type="none" title="Pokemon detector"/>
         <children>
           <component id="dbbc7" class="javax.swing.JButton" binding="locatorSwitchButton" default-binding="true">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-4087129"/>
               <text value="Stop"/>
             </properties>
           </component>
-          <component id="5ff4b" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+          <scrollpane id="3674e" binding="scrollPane">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13567739"/>
+              <foreground color="-14540255"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="5d9a2" class="javax.swing.JTable" binding="detectorTable">
+                <constraints/>
+                <properties>
+                  <background color="-13567739"/>
+                  <columnSelectionAllowed value="false"/>
+                  <enabled value="false"/>
+                  <foreground color="-14540255"/>
+                  <requestFocusEnabled value="true"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
+          <component id="872f7" class="javax.swing.JTextField" binding="detectorMessages">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties>
-              <background color="-13567483"/>
+              <background color="-14202253"/>
+              <foreground color="-419579"/>
             </properties>
           </component>
         </children>
